# creader

./: .gitignore  AGENTS.md  CONTEXT.md  CROSS_PAGE_SELECTION_IMPROVEMENTS.md  DESIGN.md  ICONS_GENERATED.md  METADATA_COVER_FIX.md  PRODUCT.md  README.md  REVIEW.md  ai-window.html  create-icon.html  icon-generator.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.impeccable/: design.json
.trae/documents/: CReader 代码审查与改进计划.md  CReader 代码审阅与整改计划.md
docs/: manual-epub-validation.md  prd-codebase-architecture-deepening.md  prd-library-organizer-book-folders.md  reading-engine-adapter.md  release.md  rust-search-indexing-roadmap.md
docs/adr/: 0001-rust-indexing-before-renderer-migration.md  0002-search-index-is-derived-data.md  0003-search-index-does-not-own-ai-context.md  0004-render-reading-memory-markdown-with-remark.md  0005-keep-client-state-and-storage-refactors-out-of-search-indexing.md  0006-keep-ai-client-migration-separate-from-search-indexing.md  0007-allow-chapter-level-search-locators.md  0008-keep-frontend-search-fallback-during-rust-index-rollout.md  0009-deliver-rust-search-as-vertical-slices.md  0010-spike-epub-parser-before-locking-rust-dependency.md  0011-astryx-core-reading-surfaces-migration.md  0012-use-foliate-as-the-only-reading-engine.md  0013-reframe-settings-as-ai-reading-console.md  0014-rename-library-categories-to-book-folders.md  0015-make-sidebar-a-library-organizer.md  0016-focus-ai-settings-on-three-tabs.md  0017-unify-chrome-and-book-body-from-one-paper-palette.md  0018-remove-whole-book-search.md  0019-keep-ai-tool-calling-local-in-rust.md  0020-ai-book-locator-tool.md  0021-no-custom-continuous-renderer.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
memory/epub-reader/: notes.md  task_plan.md  ui_optimization_plan.md
reading-assistant/: instructions.md
releases/: README.md
scripts/: verify-reading-assistant.mjs
src/: App.css  App.tsx  ai-window.tsx  appLifecycle.test.tsx  appLifecycle.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icnsFile.icns
src-tauri/prompts/: reading_ai_system.md
src-tauri/resources/fonts/: LICENSE-Roboto.txt
src-tauri/src/: ai.rs  book_files.rs  book_text.rs  font_files.rs  lib.rs  main.rs  path_safety.rs  reading_memory.rs  search_index.rs
src-tauri/src/ai/: reading_tools.rs  stream.rs
src/components/: AIPanel.css  AIPanel.tsx  (+33 more)
(+173 files in other folders)
