[package]
name = "creader"
version = "0.3.1"
description = "A lightweight EPUB reader with AI assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "creader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "io-util", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
regex = "1.12.4"
roxmltree = "0.21.1"
tantivy = "0.26.1"
tantivy-jieba = "0.20.0"
zip = "8.6.0"

[dev-dependencies]
tempfile = "3.27.0"
