[package]
name = "creader"
version = "1.0.1"
description = "A lightweight EPUB reader with AI assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "creader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-openai = { version = "0.41.1", features = ["chat-completion"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "time", "io-util", "sync", "rt", "macros"] }
futures-util = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
lru = "0.12"

[dev-dependencies]
serial_test = "3"
